--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
 </head>
 <body>
   <div class="container">
-    <h2>Input Pesanan Kasir Cafe</h2>
+    <h2>Input Pesanan Kasir Cafe Thel Gathel</h2>
 
     <div class="row">
       <div class="col">
         <label>Nama Menu</label>
         <select id="menu">
-          <option value="Kopi Hitam" data-harga="15000">Kopi Hitam - 15.000</option>
-          <option value="Es Teh" data-harga="8000">Es Teh - 8.000</option>
-          <option value="Cappuccino" data-harga="20000">Cappuccino - 20.000</option>
-          <option value="Roti Bakar" data-harga="12000">Roti Bakar - 12.000</option>
+          <option value="Kopi Hitam" data-harga="15000">Kopi Tempik Hitam - 15.000</option>
+          <option value="Es Teh" data-harga="8000">Es Teh Jembot - 8.000</option>
+          <option value="Cappuccino" data-harga="20000">Cappuccino Kontol - 20.000</option>
+          <option value="Roti Bakar" data-harga="12000">Roti Bakar Memek - 12.000</option>
         </select>
       </div>
       <div style="width:130px">
@@ -113,7 +113,7 @@
   <label>Uang Diberikan</label>
   <input type="number" id="uangDiberikan" oninput="hitungKembalian()" placeholder="Masukkan jumlah uang" />
 
-  <h3>Kembalian: <span id="kembalian">0</span></h3>
+  <h3>Kembalian(durong iso nyusuk i thel gathel): <span id="kembalian">0</span></h3>
 </div>
   </div>
 
